# PolyHorn

./: BUILD.md  LICENSE  PolyHorn  README.md  config-example.json  example_api.py  fully_existentially_constraints.txt  input-example.smt2  pyproject.toml
experiments/configs-base/mathsat/benchmarks/RevTerm/all/: 2Nested_false-termination.c.smt2.json  2Nested_true-termination.c.smt2.json  4NestedWith3Variables_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-Fig1_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-Fig2a_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-Fig2b_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-complex_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-counterex1b_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-cousot9_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-loops_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-random1d_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-speedFails4_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-speedpldi2_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-speedpldi3_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-wcet2_true-termination.c.smt2.json  AliasDarteFeautrierGonnord-SAS2010-wise_true-termination.c.smt2.json  AlternDiv.c.smt2.json  AlternDivWidening.c.smt2.json  AlternKonv.c.smt2.json  (+161 more)
max/: PolyHorn  config-example.json  fully_existentially_constraints.txt  input-example.smt2
max/experiments/: README.md
max/src/: Convertor.py  Farkas.py  PolyHorn.py  Putinar.py  Solver.py
src/: Coefficient.py  Constant.py  Constraint.py  Farkas.py  Handelman.py  Parser.py  Polynomial.py  PositiveModel.py  Putinar.py  Solver.py  main.py  main_cmd.py
src/polyhorn/: Coefficient.py  Constant.py  Constraint.py  Convertor.py  DNF.py  Farkas.py  Handelman.py  Polynomial.py  PositiveModel.py  Putinar.py  Solver.py  main.py
tests/: test_api.py  test_cmd_tool.py
tests/res/: test_config.json
(+8804 files in other folders)
