[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyhorn"
version = "0.0.2"
authors = [  
  { name="Krishnendu Chatterjee", email="krishnendu.chatterjee@ist.ac.at" }
  { name="Amir Kafshdar Goharshady", email="goharshady@cse.ust.hk" }
  { name="Ehsan Kafshdar Goharshady", email="ehsan.goharshady@ist.ac.at" },
  { name="Mehrdad Karrabi", email="mehrdad.karrabi@ist.ac.at" },
  { name="Milad Saadat", email="milad.saadat@sharif.edu" },
  { name="Maximilian Seeliger", email="maximilian.seeliger@tuwien.ac.at" }
  { name="Dorde Zikelic", email="dzikelic@smu.edu.sg" }
]
description = "PolyHorn is a solver for Polynomial Constrained Horn Clauses (pCHC)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "lark",
    "pysmt"
]

[project.urls]
Homepage = "https://github.com/milad-saadat/PolyHorn"
Issues = "https://github.com/milad-saadat/PolyHorn/issues"